[package]
name = "ddtank-rs"
version = "0.1.1"
edition = "2021"
default-run = "ddtank-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ddtank-lua"
path = "src/ddtank_lua.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
sciter-rs = "0.5.58"
anyhow = "1.0"
glob = "0.3.1"
rlua = "0.19.4"
reqwest = { version = "0.11.14", features = ["blocking", "cookies"] }
rust-crypto = "0.2.36"
clip = "0.1.1"
clap = { version = "4.1.14", features = ["derive"] }

[build-dependencies]
embed-manifest = "1.3.1"
which = "4.4.0"
